# rust-node-metrics-tui

./: Cargo.toml  README.md
config/: node-exporter.service  node-metrics-tui.json
docs/: metrics.txt
scripts/: infrastructure.sh
src/: main.rs
src/cli/: schema.rs
src/config/: load.rs
src/error/: generic.rs
src/handlers/: process.rs
src/ui/: render.rs
