[package]
name = "node-metrics-tui"
version = "0.2.10"
edition = "2024"
authors = ["Luigi Mario Zuccarelli<>luigizuccarelli@gmail.com"]

[dependencies]
serde_derive = "1.0.219"
clap = { version = "4.5.41", features = ["derive"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
serde = "1.0.225"
serde_json = "1.0.145"
http = "1.1.0"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.89"
reqwest = "0.12.23"
regex = "1.12.2"
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"


[profile.release]
strip = true      # Strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Maximize size reduction optimization
